@@ -6,3 +6,5 @@ build
 inst/doc/jss.bst
 ^.*\.Rproj$
 ^\.Rproj\.user$
+inst/include/Rcpp/preprocessor
+inst/include/Rcpp/sugar/functions/impl
